Fix table on small screens

--- a/css/poole.css
+++ b/css/poole.css
@@ -239,16 +239,17 @@ img {
 
 /* Tables */
 table {
+  border-collapse: collapse;
   margin-bottom: 1rem;
   width: 100%;
-  border: 1px solid #e5e5e5;
-  border-collapse: collapse;
 }
+
 td,
 th {
   padding: .25rem .5rem;
   border: 1px solid #e5e5e5;
 }
+
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
   background-color: #f9f9f9;
@@ -1210,5 +1211,10 @@ a.anchor-link:hover {
 @media only screen and (max-width: 500px) {
   .hide-on-mobile {
     display: none;
+  }
+
+  table {
+    display: block;
+    overflow-x: scroll;
   }
 }
